# Uni

./: .gitattributes  .gitignore  .gitmodules  README.md  rnd.out
AISD/cwiczenia/: rozwiazanie-zadania-2.3.tex  zad2-7.aux  zad2-7.fdb_latexmk  zad2-7.fls  zad2-7.out  zad2-7.tex  zad2-7.toc
AISD/other/: Makefile  kopiec  kopiec.c  main.c
AISD/themis/: fibb.c  main  zadanie powitalne.c
ASK/lab1/: zad8v2
ASK/lab2/: zad2  zad2.c  zad5  zad7
ASK/lab3/: .zad1.c.swo  .zad2.c.swp  zad1.c  zad5  zad5.c  zad7  zad7.c  zad8.c
ASK/lab4/: .zad4.swp  zad3  zad4  (+4 more)
BD/: README  lukasz_klasinski
Data Compression/Project/lz77/: Cargo.toml
Data Compression/Project/lz77/huffman_compress/src/: lib.rs
Data Compression/Project/lz77/src/: main.rs
Data Compression/Project/lzss+lz77/: Cargo.toml
Data Compression/Project/lzss+lz77/benches/: benchmark.rs
Data Compression/Project/lzss+lz77/huffman_compress/: Cargo.toml
Data Compression/Project/lzss+lz77/paper/: raport.md
Data Compression/Project/lzss+lz77/src/: main.rs
Data Compression/Project/lzss+lz77/src/compression/: consts.rs  lz77.rs  lzss.rs  mod.rs
Distributed Systems/: Listy-Rozproszone.doc  list2.md  list3.md  list4.md  list5.md  list6.md  list7.md  list8.md  list9.md
Haskell/: lab1.hs  lab1.lhs
IO_KCK/: convpresentation  mkpresentation  mkscreens  sent
JFIZO/: ex21.md  ex40M.md  ex56.md
RPIS/: rpis10.10.ipynb  rpr-10.dsc
Txt/: zad1.md  zad2.md  zad3.md
Txt/edit_distance_project/: Cargo.toml  README.md
Txt/edit_distance_project/benches/: benchmark.rs
Txt/edit_distance_project/src/: main.rs
Txt/edit_distance_project/src/algorithms/: edit_distance_adv.rs  edit_distance_basic.rs  edit_distance_improved.rs  helper.rs  mod.rs  rmq.rs  suffix_array.rs
(+953 files in other folders)
