[package]
name = "lzss"
version = "0.1.0"
authors = ["Congr00 <lukasklasinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huffman-compress = { path = "huffman_compress" }
bit-vec = "0.6.2"
bincode = "1.2.1"
thiserror = "1.0"
getopts = "0.2"
fnv = "1.0.3"

[dev-dependencies]
lipsum = "0.6.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "compression"
path = "src/compression/mod.rs"

[profile.test]
opt-level = 3